# image-baker

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING  LICENSE  MANIFEST.in  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: black-formatter.yml  docs.yml  pypi.yml  ruff.yml
QUICKSTART/: index.html
api-reference/: index.html
api-usage/: index.html
assets/favicon_io/: index.html
docs/: QUICKSTART.md  api-reference.md  api-usage.md  examples.md  index.md
docs/assets/favicon_io/: README.md
examples/: api_example.py  app.py  bake_config.py  example_config.py  index.html  loaded_models.py  rtdetr_v2.py  sam_model.py  segmentation.py  test_api.py
experiments/: expt.ipynb
imagebaker/: __init__.py  _version.py  app.py  cli.py  loaded_models.py
imagebaker/api/: __init__.py  annotation.py  baker.py  layer.py  models.py
imagebaker/base/: configs.py  layer.py  modifier.py  painter.py
imagebaker/core/configs/: configs.py
imagebaker/core/defs/: __init__.py  defs.py
imagebaker/core/plugins/: base_plugin.py  cosine_plugin.py
imagebaker/layers/: __init__.py  annotable_layer.py  base_layer.py  canvas_layer.py  non_annotable_layer.py
imagebaker/list_views/: __init__.py  annotation_list.py  canvas_list.py  image_list.py  layer_list.py  layer_settings.py
imagebaker/models/: base_model.py  rtdetr_v2.py  sam_model.py  segmentation.py
imagebaker/tab_views/: __init__.py  baker_tab.py  base_layer.py  layerify_tab.py
imagebaker/tabs/: __init__.py  baker_tab copy.py  baker_tab.py  layerify_tab.py
imagebaker/utils/: __init__.py  image.py  state_utils.py  transform_mask.py  utils.py  vis.py
imagebaker/window/: __init__.py  app.py  main_window.py
imagebaker/workers/: __init__.py  baker_worker.py  layerfy_worker.py  layerify_worker.py  model_worker.py
search/: search_index.json
tests/unittests/: test_main_window.py
