[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagebaker"
version = "0.0.41"
description = "A package for baking images."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ramkrishna Acharya", email = "qramkrishna@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.4",
    "opencv-python>=4.5",
    "black>=23.1",
    "pydantic>=2.0",
    "flake8>=6.0",
    "typer>=0.9",
    "PySide6==6.8.3",
    "loguru"
]

[project.scripts]
imagebaker = "imagebaker.window.app:app_cli"

[project.urls]
Homepage = "https://github.com/q-viper/Image-Baker"

[tool.setuptools]
packages = ["imagebaker"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
exclude = ["build", "dist", ".venv", "__pycache__"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = ["tests"]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.21",
    "pymdown-extensions>=8.0",
    "mkdocs-awesome-pages-plugin"
]